--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,9 +1,343 @@
+/* Variables para los colores y el radio de los bordes */
 :root {
-    /* Aquí puedes definir variables de color si lo necesitas */
+    --white: #ffffff;
+    --dark: #000000;
+    --primary: #b30000;
+    --secundary: #799deb;
+    --secundaryLight: #dfd4c0;
+    --radio-borde: 0.5rem;
+
 }
 
-body {
-    font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 0;
+/************************************************************************/
+
+/* tipo y tamaño base de la fuente */
+html {
+    font-family: "Roboto", sans-serif;
+    font-size: 62.5%;
+    scroll-behavior: smooth;
+}
+
+/************************************************************************/
+
+/* Hace que el contenedor mida lo que se especifica en el width y en el height */
+
+* {
+    box-sizing: border-box;
+}
+
+
+
+/* tamaños para los textos */
+h1 {
+    margin: 1rem;
+    text-align: center;
+    font-size: 4rem;
+    color: var(--dark);
+    font-weight: bolder;
+}
+
+h1 span {
+    font-size: 2rem;
+}
+
+h2 {
+    font-size: 3rem;
+}
+
+h3 {
+    font-size: 2rem;
+}
+
+p {
+    font-size: 1.5rem;
+}
+
+/************************************************************************/
+
+/* barra de navegación  */
+.navegacion {
+    background-color: var(--primary);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+/* 
+    @media query para modificar reglas:
+    Se aplican las reglas quel hay dentro de la media query
+    si la ventana del navegador mide un mínimo de 480px
+    */
+@media (min-width: 480px) {
+    .navegacion {
+        flex-direction: row;
+        justify-content: space-around;
+    }
+}
+
+/* enlaces de la barra de navegación */
+.navegacion a {
+    padding: 1rem;
+    color: var(--white);
+    text-decoration: none;
+    font-weight: bold;
+    font-size: 2rem;
+    line-height: 1.5;
+}
+
+.navegacion a:hover {
+    background-color: var(--secundary);
+    color: var(--dark);
+}
+
+/************************************************************************/
+
+/* cabecera */
+.banner {
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 800px;
+    position: relative;
+}
+
+.section-banner {
+    position: absolute;
+    background-color: rgba(0, 0, 0, 0.5);
+    width: 100%;
+    height: 100%;
+    background-image: url(../img/2ebc8835f16cbb888c6aac896469b75b.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+
+    /* alinear hijos horizontal y vertical */
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+
+
+.section-banner p,
+.section-banner h2 {
+    color: var(--white);
+}
+
+.section-banner p {
+    font-weight: 600;
+}
+
+/* alinear el icono y el párrafo */
+.center-vertical {
+    display: flex;
+    align-items: center;
+}
+
+.boton {
+    background-color: var(--secundary);
+    color: var(--white);
+    padding: 1rem 3rem;
+    font-size: 2rem;
+    font-weight: bold;
+    text-decoration: none;
+    text-transform: uppercase;
+    border-radius: var(--radio-borde);
+    width: 90%;
+    text-align: center;
+}
+
+
+/* Media query para que el botón no ocupe todo el ancho
+    para un mínimo de pantalla de 480px
+*/
+@media (min-width: 480px) {
+    .boton {
+        width: auto;
+    }
+}
+
+/************************************************************************/
+
+
+/* contenedor principal
+    contiene todo el main
+*/
+.container {
+    background-color: var(--white);
+    padding: 1rem;
+    border-radius: var(--radio-borde);
+    margin-top: 1rem;
+}
+
+
+@media (min-width: 768px) {
+    .container {
+        width: 90%;
+        margin: 2rem auto;
+        flex-direction: row;
+    }
+}
+
+.shadow {
+    box-shadow: 3px 10px 19px -4px rgba(0, 0, 0, 0.57);
+}
+
+.shadow-small {
+    box-shadow: 4px 4px 8px 0px rgba(194, 194, 194, 0.7);
+}
+
+
+.contenedor-zapatillas {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+/* centra todos los textos que haya dentro de las etiquetas section */
+section {
+    text-align: center;
+}
+
+/* media query para pantallas con un mínimo de 768px
+    establece que los hijos se alineen en una fila
+*/
+@media (min-width: 768px) {
+    .contenedor-zapatillas {
+        flex-direction: row;
+    }
+}
+
+.section-zapatillas {
+    flex: 1;
+    margin: 1rem;
+}
+
+.section-zapatillas h3 {
+    color: var(--primary);
+    border-radius: var(--radio-borde);
+}
+
+.icono {
+    height: auto;
+    width: 100%;
+}
+
+/* separa las líneas de los párrafos al doble de la medida por defecto */
+.section-zapatillas p {
+    line-height: 2;
+    margin: 1rem;
+    text-align: justify;
+}
+
+/************************************************************************/
+
+/* formulario */
+
+.formulario {
+    background-color: var(--dark);
+    /* width mínimo de 80rem o 100% */
+    width: min(80rem, 100%);
+    margin: 0 auto;
+    padding: 1.5rem;
+    border-radius: var(--radio-borde);
+}
+
+.formulario fieldset {
+    border: none;
+}
+
+.formulario legend {
+    margin: 0 auto 2rem auto;
+    font-size: 1.5rem;
+    text-transform: uppercase;
+    font-weight: bold;
+    color: var(--secundary);
+}
+
+
+.container-input {
+    margin-bottom: 1rem;
+}
+
+.container-input label {
+    color: var(--white);
+    font-weight: bold;
+    margin-bottom: 0.5rem;
+    display: block;
+    text-align: left;
+}
+
+.container-input input,
+.container-input textarea {
+    width: 100%;
+    padding: 1rem;
+    border-radius: var(--radio-borde);
+    border: none;
+}
+
+.enviar {
+    width: 100%;
+    border: none;
+    margin-top: 1rem;
+}
+
+@media (min-width: 768px) {
+
+    /* aplica grid 1 fila con dos columnas */
+    .inputs {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        /* el tamaño de las filas se ajusta al contenedor y al contenido */
+        grid-template-rows: auto auto auto;
+        /* margen entre columnas */
+        column-gap: 1rem;
+    }
+}
+
+/* selecciona el hijo 3 y 4 para que ocupen las dos columnas */
+.container-input:nth-child(3),
+.container-input:nth-child(4) {
+    grid-column: 1/3;
+}
+
+.container-input textarea {
+    height: 15rem;
+}
+
+/************************************************************************/
+
+/* footer */
+
+/* Estilo general para el footer */
+footer {
+    background-color: #333; /* Color de fondo oscuro */
+    color: #fff; /* Color del texto en blanco */
+    text-align: center; /* Alineación del texto en el centro */
+    padding: 1em; /* Espaciado interno */
+    border-top: 2px solid #444; /* Borde superior sutil */
+    margin-top: 2em; /* Espaciado superior para separar del contenido */
+}
+
+/* Estilo para el párrafo dentro del footer */
+footer p {
+    margin: 0.5em 0; /* Espaciado vertical entre párrafos */
+    font-size: 1em; /* Tamaño de la fuente */
+}
+
+/* Estilo para el símbolo de registrado */
+footer p span {
+    font-size: 1.2em; /* Tamaño del símbolo */
+    vertical-align: middle; /* Alineación vertical con el texto */
+}
+
+/* Estilo para los enlaces */
+footer a.enlace {
+    color: #4db8ff; /* Color del enlace */
+    text-decoration: none; /* Quitar subrayado del enlace */
+    font-weight: bold; /* Fuente en negrita */
+}
+
+footer a.enlace:hover {
+    text-decoration: underline; /* Subrayado al pasar el ratón */
+    color: #3399ff; /* Color del enlace en hover */
 }
