--- a/css/estilos.css
+++ b/css/estilos.css
@@ -93,38 +93,34 @@ p {
 /************************************************************************/
 
 /* cabecera */
+/* Banner de la cabecera */
 .banner {
+    background-image: url(../img/2ebc8835f16cbb888c6aac896469b75b.jpg);
+    /* Imagen de fondo del banner */
+    height: 100vh;
+    /* Ocupa toda la altura de la ventana */
     background-repeat: no-repeat;
     background-size: cover;
-    height: 800px;
+    /* Asegura que la imagen cubra el área */
     position: relative;
 }
 
 .section-banner {
     position: absolute;
     background-color: rgba(0, 0, 0, 0.5);
+    /* Fondo semitransparente */
     width: 100%;
     height: 100%;
-    background-image: url(../img/2ebc8835f16cbb888c6aac896469b75b.jpg);
-    background-repeat: no-repeat;
-    background-size: cover;
-
-    /* alinear hijos horizontal y vertical */
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-}
-
-
-
-.section-banner p,
-.section-banner h2 {
-    color: var(--white);
+    /* Centra el contenido del banner */
 }
 
 .section-banner p {
-    font-weight: 600;
+    color: #ffffff;
+    /* Color del texto dentro del banner */
 }
 
 /* alinear el icono y el párrafo */
